--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</properties>
 
 	<build>
+		<finalName>${project.artifactId}</finalName>
 		<resources>
 			<resource>
 				<directory>src</directory>
