--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,11 @@
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version> <!-- You can use a different version if needed -->
+		</dependency>
 
 	</dependencies>
 </project>
