--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.7.201606060606</version>
+				<version>0.8.11</version>
 				<executions>
 					<execution>
 						<goals>
@@ -70,8 +70,8 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
 
+		</plugins>
 	</build>
 	<dependencies>
 
@@ -112,6 +112,12 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>4.2.6.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>3.1.5</version>
 		</dependency>
 
 		<!-- http://mvnrepository.com/artifact/org.springframework/spring-test -->
@@ -198,6 +204,11 @@
 			<groupId>org.mindrot</groupId>
 			<artifactId>jbcrypt</artifactId>
 			<version>0.4</version> <!-- You can use a different version if needed -->
+		</dependency>
+		<dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
 		</dependency>
 
 	</dependencies>
