--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,6 @@
 			<version>5.1.17.Final</version>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>org.hibernate</groupId> -->
-		<!-- <artifactId>hibernate-c3p0</artifactId> -->
-		<!-- <version>5.1.0.Final</version> -->
-		<!-- </dependency> -->
 
 		<dependency>
 			<groupId>mysql</groupId>
@@ -210,6 +205,15 @@
 			<artifactId>javax.mail</artifactId>
 			<version>1.6.2</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.14.1</version> <!-- Use the latest version available -->
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.14.1</version> <!-- Use the latest version available -->
+		</dependency>
 	</dependencies>
 </project>
