--- a/pom.xml
+++ b/pom.xml
@@ -215,5 +215,20 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.14.1</version> <!-- Use the latest version available -->
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>5.10.0</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>3.12.4</version>
+			<scope>test</scope>
+		</dependency>
+
+
 	</dependencies>
 </project>
